2_1_래퍼랜스카운팅_직접만들기
수동적으로 만든 래퍼랜스 카운트가 있으면 객체포인터를 복사 후에 래퍼랜스 카운트를 올리기전 중간단계에서 해당 객체가 삭제 되는 경우가 있을 수있다. 이 경우 복사한 객체가 댕글리 포인터가 될 가능성이 있으므로 스마트포인터를 사용해야한다.

--- a/ServerCore/ServerCore.vcxproj.filters
+++ b/ServerCore/ServerCore.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClInclude Include="DeadlockProfiler.h">
       <Filter>Thread</Filter>
     </ClInclude>
+    <ClInclude Include="RefCounting.h">
+      <Filter>Memory</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CorePch.cpp">
@@ -51,6 +54,9 @@
     <ClCompile Include="DeadlockProfiler.cpp">
       <Filter>Thread</Filter>
     </ClCompile>
+    <ClCompile Include="RefCounting.cpp">
+      <Filter>Memory</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Utills">
@@ -64,6 +70,9 @@
     </Filter>
     <Filter Include="Thread">
       <UniqueIdentifier>{368b76dc-51e5-413f-a997-02eb6947dc0a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Memory">
+      <UniqueIdentifier>{222bc548-6a43-47c7-9900-d235a97f99b8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
