2_8_템플릿흑마법_dynamic_cast템플릿으로_만들기
dynamic_cast 처럼 런타임에 확정이 안나고 컴파일시간에 타입이 결정되지만 런타임에확정되는것이 아니기에 다이나믹보다 빠르다.

--- a/ServerCore/ServerCore.vcxproj.filters
+++ b/ServerCore/ServerCore.vcxproj.filters
@@ -44,6 +44,7 @@
       <Filter>Memory</Filter>
     </ClInclude>
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="TypeCast.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CorePch.cpp">
@@ -80,6 +81,7 @@
       <Filter>Memory</Filter>
     </ClCompile>
     <ClCompile Include="ObjectPool.cpp" />
+    <ClCompile Include="TypeCast.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Utills">
