--- a/ServerCore/ServerCore.vcxproj.filters
+++ b/ServerCore/ServerCore.vcxproj.filters
@@ -55,6 +55,16 @@
     <ClInclude Include="TypeCast.h">
       <Filter>Main</Filter>
     </ClInclude>
+    <ClInclude Include="IocpCore.h">
+      <Filter>network</Filter>
+    </ClInclude>
+    <ClInclude Include="IocpEvent.h">
+      <Filter>network</Filter>
+    </ClInclude>
+    <ClInclude Include="Listener.h">
+      <Filter>network</Filter>
+    </ClInclude>
+    <ClInclude Include="Session.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CorePch.cpp">
@@ -102,6 +112,16 @@
     <ClCompile Include="TypeCast.cpp">
       <Filter>Main</Filter>
     </ClCompile>
+    <ClCompile Include="IocpCore.cpp">
+      <Filter>network</Filter>
+    </ClCompile>
+    <ClCompile Include="IocpEvent.cpp">
+      <Filter>network</Filter>
+    </ClCompile>
+    <ClCompile Include="Listener.cpp">
+      <Filter>network</Filter>
+    </ClCompile>
+    <ClCompile Include="Session.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Utills">
